syntax = "proto3";

/**
 * Image service
 * receives an empty message in order to request the next image
 * returns a new image to process
 */
service ImageSourceService {
   rpc Get (Empty) returns (PredictRequest);
   rpc GetStream (Empty) returns (stream PredictRequest);
}

/* Predict Request
 * image_data: bytes of the image to process
 * all_categories (default to false): true if response should contain
 *      all possible categories and false only for the selected one (Single Label)
 * all_attributes (default to false): true if response should contain
 *      all possible attributes and false only for the selected ones (Multi Label)
 */
message PredictRequest {
    bytes image_data = 1;
    bool all_categories = 2;
    bool all_attributes = 3;
}

message Empty {}

