syntax = "proto3";

service VisualizationService {
    rpc Visualize(VisualizationRequest) returns (Empty);
}

message VisualizationRequest {
    Image image = 1;
    PredictResponse prediction = 2;
}

/*
 * Image to analyse
 * param data: bytes of the image file
 *             encoded in some image format
 */
message Image {
    bytes data = 1;
}

/* Results associated to a single prediction in a stream request
 * categories: data associated with the predicted categories
 * attributes: data associated with the predicted attributes
 */
message PredictResponse {
    repeated Correspondence categories = 2;
    repeated Correspondence attributes = 3;
}

/* Correspondence between a label and its value */
message Correspondence {
    string label = 1;
    double value = 2;
}

message Empty {}
